--- a/bin/start.sh.example
+++ b/bin/start.sh.example
@@ -13,4 +13,4 @@ while [ -h "$SOURCE" ]; do # resolve $SOURCE until the file is no longer a symli
 done
 DIR="$( cd -P "$( dirname "$SOURCE" )" && pwd )"
 cd "$DIR"
-/Users/USERNAME/.rvm/wrappers/ruby-2.2.1/ruby notify_server.rb start
+/Users/USERNAME/.rvm/wrappers/ruby-2.2.1/ruby notify_server start
